--- a/ErpReport/ErpReport/TCL_ProductStockReport.rdl
+++ b/ErpReport/ErpReport/TCL_ProductStockReport.rdl
@@ -9,7 +9,7 @@
       <am:Name>SSDTRS</am:Name>
       <am:Version>17.9.34622.214</am:Version>
     </am:UpdatedBy>
-    <am:LastModifiedTimestamp>2024-05-09T11:39:24.3899711Z</am:LastModifiedTimestamp>
+    <am:LastModifiedTimestamp>2024-05-14T05:46:16.7325426Z</am:LastModifiedTimestamp>
   </am:AuthoringMetadata>
   <df:DefaultFontFamily>Segoe UI</df:DefaultFontFamily>
   <AutoRefresh>0</AutoRefresh>
@@ -1064,7 +1064,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=format(Sum(Fields!ReturnQty.Value,"#,##0.00"))</Value>
+                                  <Value>=format(Sum(Fields!ReturnQty.Value), "#,##0.00")</Value>
                                   <Style>
                                     <FontFamily>Arial</FontFamily>
                                     <FontWeight>Bold</FontWeight>
