--- a/KGERP/Views/BulkUpload/MaterialCategoryUpload.cshtml
+++ b/KGERP/Views/BulkUpload/MaterialCategoryUpload.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Material Category Upload";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    bool response = ViewBag.Result;
 }
 
 <style type="text/css">
@@ -32,6 +33,12 @@
                         <div class="row">
                             <div class="col-md-4"></div>
                             <div class="col-md-4">
+                                @if (response)
+                                {
+                                    <div class="alert alert-primary" role="alert">
+                                        <span>Material category upload was successful.</span>
+                                    </div>
+                                }
                                 <div class="form-group">
                                     <label>CSV File<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                     <input style="margin: 10px 0;" name="FormFile" type="file" id="fileUpload" accept=".csv" required />
