--- a/KGERP/Views/BulkUpload/MaterialCategoryUpload.cshtml
+++ b/KGERP/Views/BulkUpload/MaterialCategoryUpload.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Material Category Upload";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    bool response = ViewBag.Result;
+    bool? result = ViewBag.Result as bool?;
 }
 
 <style type="text/css">
@@ -33,21 +33,31 @@
                         <div class="row">
                             <div class="col-md-4"></div>
                             <div class="col-md-4">
-                                @if (response)
+                                @if (result.HasValue)
                                 {
-                                    <div class="alert alert-primary" role="alert">
-                                        <span>Material category upload was successful.</span>
-                                    </div>
+                                    if (result.Value)
+                                    {
+                                        <div class="alert alert-success" id="successStatus">Upload successful!</div>
+                                    }
+                                    else
+                                    {
+                                        <div class="alert alert-danger" id="successStatus">Upload failed. Please try again.</div>
+                                    }
                                 }
-                                <div class="form-group">
-                                    <label>CSV File<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                    <input style="margin: 10px 0;" name="FormFile" type="file" id="fileUpload" accept=".csv" required />
-                                    <span class="text-danger"></span>
+                                <div>
+                                    <p class="text-center hidden" id="uploadStatus">Uploading...</p>
                                 </div>
-                                <div class="form-group">
-                                    <button type="submit" id="btnSave" class="btn btn-primary btn-block">
-                                        <i class='fa fa-upload'></i> Upload File
-                                    </button>
+                                <div class="d-block" id="uploadForm">
+                                    <div class="form-group">
+                                        <label>CSV File<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                        <input style="margin: 10px 0;" name="FormFile" type="file" id="fileUpload" accept=".csv" required />
+                                        <span class="text-danger"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <button type="submit" id="btnSave" class="btn btn-primary btn-block">
+                                            <i class='fa fa-upload'></i> Upload File
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-4"></div>
@@ -63,7 +73,14 @@
 @section scripts {
     <script type="text/javascript">
         $(document).ready(function () {
+            $('#btnSave').on('click', function (event) {
+                $('#uploadForm').removeClass("d-block").addClass("hidden");
+                $('#uploadStatus').removeClass("hidden").addClass("d-block");
+            });
 
+            setTimeout(function () {
+                $("#successStatus").addClass('hidden');
+            }, 5000);
         });
     </script>
 }
